app/assets/stylesheets/components/_footer.scss
.footer{
  @extend .background-blue;
  width: 100vw;
  @extend .p-0;
  @extend .m-0;
  @extend .flex-center;
}

body{
  margin-bottom: $footer-height; // Offset body end to top of footer
}

// https://css-tricks.com/snippets/css/sticky-footer/
* {
  margin: 0;
}
html, body {
  height: 100%;
}
.page-wrap {
  min-height: 100%;
}
.page-wrap:after {
  content: "";
  display: block;
}
.footer, .page-wrap:after {
  height: $footer-height;
}

